@@ -6,6 +6,8 @@ HEAD
 - refuse to reload on active channels
 - ast_devstate_changed() changes with new cache argument
 - check for bchannel information element on incoming call
+- added 't' option to select in-band tones available indication as Q.931
+  (thanks to Maciej S. Szmigiero <mail@maciej.szmigiero.name>)
 
 
 chan_capi-1.1.6
